[Spaces] - Fix email content overflow (#1217)

--- a/packages/apps/spaces/components/ui-kit/molecules/email-timeline-item/email-timeline-item.module.scss
+++ b/packages/apps/spaces/components/ui-kit/molecules/email-timeline-item/email-timeline-item.module.scss
@@ -53,6 +53,7 @@
 
 .emailContent {
   min-height: 40px;
+  overflow-wrap: anywhere;
   & * {
     margin-bottom: 2px;
   }
